package uk.gov.companieshouse.pscfiling.api.error;

public enum RetrievalFailureReason {
    FILING_NOT_FOUND
}
